replaced arrays with lists